--- a/aboutme.html
+++ b/aboutme.html
@@ -11,9 +11,7 @@ css: "/css/aboutme.css"
 <span class="fa fa-briefcase about-icon"></span>
 Currently an <strong>Electrical Engineering intern</strong></a> at the Green Bank Observatory. Working on a machine-learning-based, real-time radio frequency interference mitigation project for radio astronomy observations. Previously worked as a <strong>software engineer</strong> (Google, IBM, <a href="https://tagged.com" target="_blank">Tagged.com</a>) and <strong>web
 developer</strong> in tiny startups (<a href="https://wish.com" target="_blank">Wish.com</a>,
-<a href="https://web.archive.org/web/20121223025414/https://www.makeupbee.com/looks.php" target="_blank">MakeupBee.com</a>,
-<a href="http://glittr.com" target="_blank">glittr.com</a>,
-<a href="https://web.archive.org/web/20120309093005/https://www.jauntr.com/" target="_blank">jauntr.com</a>).
+<a href="https://web.archive.org/web/20121223025414/https://www.makeupbee.com/looks.php" target="_blank">MakeupBee.com</a>
 </p>
 
 <p class="about-text">
@@ -23,5 +21,5 @@ Working towards my BS in <strong>Electrical Engineering</strong> from the Univer
 
 <p class="about-text">
 <span class="fa fa-code about-icon"></span>
-I enjoy writing <strong>useful & reusable software tools</strong> to help others &mdash; check out <a href="/projects">my projects</a>. In the past several years I've become an experienced R useR and an expert in R-Shiny.
+I enjoy solving complex problems at the intersection of hard science, engineering, and software that benefits others. Check out <a href="/projects">my projects</a>.
 </p>
