--- a/index.html
+++ b/index.html
@@ -23,3 +23,7 @@ Working towards my BS in <strong>Electrical Engineering</strong> from the Univer
 <span class="fa fa-code about-icon"></span>
 I enjoy solving complex problems at the intersection of hard science, engineering, and software that benefits others. Check out <a href="/projects">my projects</a>.
 </p>
+
+<div style="text-align: center; margin-top: 90px;">
+  <iframe src="https://maxhawkins.info/files/max_hawkins_.pdf" scrolling="no" width="850px" height="2200px" frameBorder="0"></iframe>
+</div>
