--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@ layout: page
 title: About
 subtitle: What makes me, me
 css: "/css/aboutme.css"
+meta-title: "Max Hawkins - Electrical Engineering Student"
+meta-description: "Interested in machine learning, remote sensing, and health - Pursuing a B.S. in Electrical Engineering."
+bigimg:
+  - "/img/big-imgs/puerto-rico.jpeg" : "Montezuma, Costa Rica (2011)"
 ---
 
 <div id="aboutme-section">
