--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ css: "/css/aboutme.css"
 meta-title: "Max Hawkins - Electrical Engineering Student"
 meta-description: "Interested in machine learning, remote sensing, and health - Pursuing a B.S. in Electrical Engineering."
 bigimg:
-  - "/img/big-imgs/puerto-rico.jpeg" : "Montezuma, Costa Rica (2011)"
+  - "/img/big-imgs/puerto-rico.jpg" : "Puerto Rico (2019)"
 ---
 
 <div id="aboutme-section">
