--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: About
+title: Max Hawkins - About
 subtitle: What makes me, me
 css: "/css/aboutme.css"
 meta-title: "Max Hawkins - Electrical Engineering Student"
