--- a/resume.html
+++ b/resume.html
@@ -5,6 +5,6 @@ show-avatar: true
 nav-short: false
 ---
 
-<div style="text-align: center; margin-top: 90px;">
-  <iframe src="http://maxhawkins.info/files/Resume_MaxHawkins_10-2018.pdf" scrolling="no" width="850px" height="1000px" frameBorder="0"></iframe>
+<div style="text-align: center; margin-top: 90px; padding-top: 5%;">
+  <iframe src="http://maxhawkins.info/files/Resume_MaxHawkins_10-2018.pdf" scrolling="no" width="850px" height="1200px" frameBorder="0"></iframe>
 </div>
