--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: page
 title: Max Hawkins - About
 subtitle: What makes me, me
 css: "/css/aboutme.css"
-meta-title: "Max Hawkins - Electrical Engineering Student"
+meta-title: About
 meta-description: "Interested in machine learning, remote sensing, and health - Pursuing a B.S. in Electrical Engineering."
 bigimg:
   - "/img/big-imgs/puerto-rico.jpg" : "Puerto Rico (2019)"
