--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 ---
 layout: page
-title: Max Hawkins - About
+title: About
 subtitle: What makes me, me
 css: "/css/aboutme.css"
-meta-title: About
+meta-title: Max Hawkins - About
 meta-description: "Interested in machine learning, remote sensing, and health - Pursuing a B.S. in Electrical Engineering."
 bigimg:
   - "/img/big-imgs/puerto-rico.jpg" : "Puerto Rico (2019)"
