--- a/projects.html
+++ b/projects.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: Max Hawkins - Projects
-meta-title: Projects
+use-site-title: Projects
 subtitle: Where my free time goes
 ---
 
