Change site title

--- a/projects.html
+++ b/projects.html
@@ -1,7 +1,7 @@
 ---
 layout: page
-title: Max Hawkins - Projects
-use-site-title: Projects
+title: Projects
+use-site-title: true
 subtitle: Where my free time goes
 ---
 
