Update about me

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: About
+title: Max Hawkins
 subtitle: What makes me, me
 css: "/css/aboutme.css"
 meta-title: Max Hawkins - About
@@ -13,18 +13,16 @@ bigimg:
 
 <p class="about-text">
 <span class="fa fa-briefcase about-icon"></span>
-Currently an <strong>Electrical Engineering intern</strong></a> at the Green Bank Observatory. Working on a machine-learning-based, real-time radio frequency interference mitigation project for radio astronomy observations. Previously worked as a <strong>software engineer</strong> (Google, IBM, <a href="https://tagged.com" target="_blank">Tagged.com</a>) and <strong>web
-developer</strong> in tiny startups (<a href="https://wish.com" target="_blank">Wish.com</a>,
-<a href="https://web.archive.org/web/20121223025414/https://www.makeupbee.com/looks.php" target="_blank">MakeupBee.com</a>
+Currently an <strong>Electrical Engineering intern</strong></a> at the Green Bank Observatory. Working on a machine-learning-based, real-time radio frequency interference and FRB/pulsar pulse detection project for radio astronomy observations.
 </p>
 
 <p class="about-text">
 <span class="fa fa-graduation-cap about-icon"></span>
-Working towards my BS in <strong>Electrical Engineering</strong> from the University of Alabama - Tuscaloosa. Minors in Math and the Randall Research Scholars program (formerly known as the Computer Based Honors Program).
+Working towards my BS in <strong>Electrical Engineering</strong> from the University of Alabama - Tuscaloosa. Minors in Math and the Randall Research Scholars program (formerly known as the Computer Based Honors Program). Interested in machine learning, remote sensing, and autonomous/electric vehicles.
 </p>
 
 <p class="about-text">
 <span class="fa fa-code about-icon"></span>
-I enjoy solving complex problems at the intersection of hard science, engineering, and software that benefits others. Check out <a href="/projects">my projects</a>.
+I enjoy solving complex problems at the intersection of hard science, engineering, and software that benefits others. Check out <a href="/projects">my projects</a>, <a href="naturallyfundamental.com">NaturallyFundamental.com</a> for my interactive science visualizations, or <a href="theclimategap.com">TheClimateGap.com</a> for some of my travel and tech stories.
 </p>
 
