--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 ---
 layout: page
-title: Max Hawkins
+title: About
+use-site-title: true
 subtitle: What makes me, me
 css: "/css/aboutme.css"
 meta-title: Max Hawkins - About
@@ -18,11 +19,23 @@ Currently an <strong>Electrical Engineering intern</strong></a> at the Green Ban
 
 <p class="about-text">
 <span class="fa fa-graduation-cap about-icon"></span>
-Working towards my BS in <strong>Electrical Engineering</strong> from the University of Alabama - Tuscaloosa. Minors in Math and the Randall Research Scholars program (formerly known as the Computer Based Honors Program). Interested in machine learning, remote sensing, and autonomous/electric vehicles.
+Working towards my BS in <strong>Electrical Engineering</strong> from the University of Alabama - Tuscaloosa. Minors in Math and the Randall Research Scholars program (formerly known as the Computer Based Honors Program). 
 </p>
 
 <p class="about-text">
 <span class="fa fa-code about-icon"></span>
-I enjoy solving complex problems at the intersection of hard science, engineering, and software that benefits others. Check out <a href="/projects">my projects</a>, <a href="naturallyfundamental.com">NaturallyFundamental.com</a> for my interactive science visualizations, or <a href="theclimategap.com">TheClimateGap.com</a> for some of my travel and tech stories.
+I enjoy solving complex problems at the intersection of hard science, engineering, and software that benefits others. Also Interested in machine learning, remote sensing, and autonomous/electric vehicles.
 </p>
+
+<p class="about-text">
+<span class="fa fa-wrench about-icon"></span>
+I'm a big fan of personal projects and learning interesting things on my own.
+Here are some things I work on in my free time.
+<ul>
+    <li><a href="/projects">My Projects</a></li>
+    <li><a href="naturallyfundamental.com">NaturallyFundamental.com</a> - my interactive science visualizations</li>
+    <li><a href="theclimategap.com">TheClimateGap.com</a> - my travel and tech storie</li>
+</ul>
+</p>
+ 
 
