--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@ I enjoy solving complex problems at the intersection of hard science, engineerin
 <p class="about-text">
 <span class="fa fa-wrench about-icon"></span>
 I'm a big fan of personal projects and learning interesting things on my own.
-Here are some things I work on in my free time.
+Here are some things I work on in my free time:
 <ul>
     <li><a href="/projects">My Projects</a></li>
-    <li><a href="naturallyfundamental.com">NaturallyFundamental.com</a> - my interactive science visualizations</li>
-    <li><a href="theclimategap.com">TheClimateGap.com</a> - my travel and tech storie</li>
+    <li><a href="http://naturallyfundamental.com">NaturallyFundamental.com</a> - my interactive science visualizations</li>
+    <li><a href="http://theclimategap.com">TheClimateGap.com</a> - my travel and tech storie</li>
 </ul>
 </p>
  
