--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ bigimg:
 
 <p class="about-text">
 <span class="fa fa-briefcase about-icon"></span>
-Currently an <strong>Electrical Engineering intern</strong></a> at the Green Bank Observatory. Working on a machine-learning-based, real-time radio frequency interference and FRB/pulsar pulse detection project for radio astronomy observations.
+Currently an <strong>Electrical Engineering intern</strong></a> at the Green Bank Observatory. Working on a machine-learning-based, real-time radio frequency interference and FRB/pulsar pulse detection project for radio astronomy observations. <a href="files/Resume_MaxHawkins_10-2018.pdf">Resume.</a>
 </p>
 
 <p class="about-text">
@@ -38,4 +38,6 @@ Here are some things I work on in my free time:
 </ul>
 </p>
  
+</div>
+
 
