--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 ---
 layout: page
 title: About
-use-site-title: true
 subtitle: What makes me, me
 css: "/css/aboutme.css"
 meta-title: Max Hawkins - About
@@ -33,8 +32,8 @@ I'm a big fan of personal projects and learning interesting things on my own.
 Here are some things I work on in my free time:
 <ul>
     <li><a href="/projects">My Projects</a></li>
-    <li><a href="http://naturallyfundamental.com">NaturallyFundamental.com</a> - my interactive science visualizations</li>
-    <li><a href="http://theclimategap.com">TheClimateGap.com</a> - my travel and tech storie</li>
+    <li><a href="http://naturallyfundamental.com">NaturallyFundamental.com</a> - interactive science visualizations</li>
+    <li><a href="http://theclimategap.com">TheClimateGap.com</a> - travel and tech stories</li>
 </ul>
 </p>
  
