--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ bigimg:
 
 <p class="about-text">
 <span class="fa fa-briefcase about-icon"></span>
-Currently an <strong>Electrical Engineering intern</strong></a> at the Green Bank Observatory. Working on a machine-learning-based, real-time radio frequency interference and FRB/pulsar pulse detection project for radio astronomy observations. <a href="files/Resume_MaxHawkins_10-2018.pdf">Resume.</a>
+Currently an <strong>Electrical Engineering intern</strong></a> at the Green Bank Observatory. Working on a machine-learning-based, real-time radio frequency interference and FRB/pulsar pulse detection project for radio astronomy observations. <a href="files/Resume_MaxHawkins_10-2018.pdf">My resume.</a>
 </p>
 
 <p class="about-text">
@@ -30,7 +30,7 @@ I enjoy solving complex problems at the intersection of hard science, engineerin
 <span class="fa fa-wrench about-icon"></span>
 I'm a big fan of personal projects and learning interesting things on my own.
 Here are some things I work on in my free time:
-<ul>
+<ul style="margin: auto">
     <li><a href="/projects">My Projects</a></li>
     <li><a href="http://naturallyfundamental.com">NaturallyFundamental.com</a> - interactive science visualizations</li>
     <li><a href="http://theclimategap.com">TheClimateGap.com</a> - travel and tech stories</li>
