--- a/projects.html
+++ b/projects.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: Projects
-use-site-title: true
+meta-title: Max Hawkins - Projects
 subtitle: Where my free time goes
 ---
 
