--- a/projects.html
+++ b/projects.html
@@ -1,8 +1,20 @@
 ---
 layout: page
 title: Projects
+css: "/css/aboutme.css"
 meta-title: Max Hawkins - Projects
 subtitle: Where my free time goes
 ---
 
-<div>This is some test text.</div>
+<div class="container">
+  <h1>Hello World!</h1>
+  <div class="row">
+    <div class="col-sm-3" style="background-color:yellow;">
+      <div><h3>Electric Longboard</h3></div>
+        <p>This is how I built my electric longboard</p>
+    </div>
+    <div class="col" style="background-color:pink;">
+      <p>Sed ut perspiciatis...</p>
+    </div>
+  </div>
+</div>
