--- a/projects.html
+++ b/projects.html
@@ -14,21 +14,21 @@ subtitle: Where my free time goes
       <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
     </ol>
     <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img src="img/longboard_feature.jpg" class="d-block w-100" alt="...">
+      <div class="carousel-item item active">
+        <img src="/img/longboard_feature.jpg" class="d-block w-100" alt="...">
         <div class="carousel-caption d-none d-md-block">
           <h5>First slide label</h5>
           <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
         </div>
       </div>
-      <div class="carousel-item">
+      <div class="carousel-item item">
         <img src="..." class="d-block w-100" alt="...">
         <div class="carousel-caption d-none d-md-block">
           <h5>Second slide label</h5>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
         </div>
       </div>
-      <div class="carousel-item">
+      <div class="carousel-item item">
         <img src="..." class="d-block w-100" alt="...">
         <div class="carousel-caption d-none d-md-block">
           <h5>Third slide label</h5>
