--- a/projects.html
+++ b/projects.html
@@ -5,16 +5,19 @@ meta-title: Max Hawkins - Projects
 subtitle: Where my free time goes
 ---
 
-<div class="card mb-3" style="max-width: 540px;">
+<div class="card mb-3" style="max-width: 740px;">
   <div class="row no-gutters">
     <div class="col-md-4">
-      <img src="/img/longboard_feature.jpg" class="card-img" alt="...">
+      <img src="/img/longboard_feature.jpg" class="card-img" alt="featured image of my electric longboard">
     </div>
     <div class="col-md-8">
       <div class="card-body">
-        <h5 class="card-title">DIY Electric Longboard</h5>
+        <h2 class="card-title">DIY Electric Longboard</h2>
         <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+        <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">Read More...</button>
+        <div class="collapse" id="collapseExample">
+            Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
+        </div>
       </div>
     </div>
   </div>
