--- a/projects.html
+++ b/projects.html
@@ -5,35 +5,43 @@ meta-title: Max Hawkins - Projects
 subtitle: Where my free time goes
 ---
 
-<div>
+<style>
+.carousel .item img {
+  max-height: 768px;
+  min-width: auto;
+}
 
+</style>
+<div>
+    <h2>DIY Electric Longboard</h2>
     <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
       <ol class="carousel-indicators">
         <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
         <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
         <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
       </ol>
-  <div class="carousel-inner">
-    <div class="carousel-item item active">
-      <img class="d-block w-100" src="/img/longboard_feature.jpg" alt="First slide">
+      <div class="carousel-inner">
+        <div class="carousel-item item active">
+          <img class="d-block w-100" src="/img/longboard_feature.jpg" alt="First slide">
+        </div>
+        <div class="carousel-item item">
+          <img class="d-block w-100" src="/img/longboard_feature.jpg" alt="Second slide">
+        </div>
+        <div class="carousel-item item">
+          <img class="d-block w-100" src="/img/longboard_feature.jpg" alt="Third slide">
+        </div>
+      </div>
+      <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="false"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="false"></span>
+        <span class="sr-only">Next</span>
+      </a>
     </div>
-    <div class="carousel-item item">
-      <img class="d-block w-100" src="/img/longboard_feature.jpg" alt="Second slide">
-    </div>
-    <div class="carousel-item item">
-      <img class="d-block w-100" src="/img/longboard_feature.jpg" alt="Third slide">
-    </div>
-  </div>
-  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-  </a>
-</div>
 
+    <p>This is how I built the longboard! lkasjdflaskdjflsk</p>
 </div>
 
 
