--- a/projects.html
+++ b/projects.html
@@ -13,7 +13,7 @@ subtitle: Where my free time goes
 
 </style>
 <div>
-    <h2 style="text-align: center; padding: 5%">DIY Electric Longboard</h2>
+    <h2 style="text-align: center; padding-top: 2%">DIY Electric Longboard</h2>
     <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" style="max-height: 60%">
       <ol class="carousel-indicators">
         <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
@@ -31,7 +31,7 @@ subtitle: Where my free time goes
           <img class="d-block w-100" src="/img/longboard_feature.jpg" alt="Third slide">
         </div>
       </div>
-      <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+      <a class="left carousel-control carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
         <span class="carousel-control-prev-icon" aria-hidden="false"></span>
         <span class="sr-only">Previous</span>
       </a>
@@ -45,35 +45,3 @@ subtitle: Where my free time goes
 </div>
 
 <hr>
-
-<div>
-    <h2 style="text-align: center; padding: 5%">DIY Electric Longboard</h2>
-    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" style="max-height: 60%">
-      <ol class="carousel-indicators">
-        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-      </ol>
-      <div class="carousel-inner">
-        <div class="carousel-item item active">
-          <img class="d-block w-100" src="/img/longboard_feature.jpg" alt="First slide">
-        </div>
-        <div class="carousel-item item">
-          <img class="d-block w-100" src="/img/longboard_feature.jpg" alt="Second slide">
-        </div>
-        <div class="carousel-item item">
-          <img class="d-block w-100" src="/img/longboard_feature.jpg" alt="Third slide">
-        </div>
-      </div>
-      <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="false"></span>
-        <span class="sr-only">Previous</span>
-      </a>
-      <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="false"></span>
-        <span class="sr-only">Next</span>
-      </a>
-    </div>
-
-    <p>This is how I built the longboard! lkasjdflaskdjflsk</p>
-</div>
