--- a/projects.html
+++ b/projects.html
@@ -6,17 +6,18 @@ subtitle: Where my free time goes
 ---
 
 <style>
-.carousel .item img {
-  max-height: 768px;
-  min-width: auto;
+.carousel img {
+  width: auto;
+  height: 425px;
+  max-height: 225px;
 }
 
 </style>
 <div>
     <h2 style="text-align: center; padding-top: 2%">DIY Electric Longboard</h2>
     
-    <div class="bd-example">
-      <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
+    
+      <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel" style="align-content: center; max-height: 50%">
         <ol class="carousel-indicators">
           <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
           <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
@@ -54,7 +55,6 @@ subtitle: Where my free time goes
           <span class="sr-only">Next</span>
         </a>
       </div>
-    </div>
 
     <p>This is how I built the longboard! lkasjdflaskdjflsk</p>
 </div>
