--- a/projects.html
+++ b/projects.html
@@ -6,7 +6,7 @@ subtitle: Where my free time goes
 ---
 
 <style>
-.carousel img {
+.carousel {
   width: auto;
   height: 425px;
   max-height: 225px;
