--- a/projects.html
+++ b/projects.html
@@ -6,11 +6,7 @@ subtitle: Where my free time goes
 ---
 
 <style>
-.carousel {
-  width: auto;
-  height: 425px;
-  max-height: 225px;
-}
+
 
 </style>
 <div>
@@ -23,23 +19,23 @@ subtitle: Where my free time goes
           <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
           <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
         </ol>
-        <div class="carousel-inner">
+        <div class="carousel-inner" style="max-height: 50%">
           <div class="carousel-item item active">
-            <img src="/img/longboard_feature.jpg" class="d-block w-100" alt="...">
+            <img src="/img/longboard/longboard_feature.jpg" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
               <h5>First slide label</h5>
               <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
             </div>
           </div>
           <div class="carousel-item item">
-            <img src="/img/404_image.jpg" class="d-block w-100" alt="...">
+            <img src="/img/longboard/longboard_battery_assembly.jpg" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
               <h5>Second slide label</h5>
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
             </div>
           </div>
           <div class="carousel-item item">
-            <img src="/img/headshot.png" class="d-block w-100" alt="...">
+            <img src="/img/longboard/longboard_battery_soft.jpg" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
               <h5>Third slide label</h5>
               <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
