--- a/projects.html
+++ b/projects.html
@@ -11,7 +11,7 @@ subtitle: Where my free time goes
 </style>
 <div>
     <h2 style="text-align: center; padding-top: 2%">DIY Electric Longboard</h2>
-    
+    <hr>
     
       <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel" style="align-content: center; max-height: 50%">
         <ol class="carousel-indicators">
@@ -42,12 +42,12 @@ subtitle: Where my free time goes
             </div>
           </div>
         </div>
-        <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
+        <a class="carousel-control-prev left carousel-control" href="#carouselExampleCaptions" role="button" data-slide="prev">
           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
           <span class="sr-only">Previous</span>
         </a>
-        <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <a class="carousel-control-next right carousel-control" href="#carouselExampleCaptions" role="button" data-slide="next">
+          <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
           <span class="sr-only">Next</span>
         </a>
       </div>
