--- a/projects.html
+++ b/projects.html
@@ -47,7 +47,7 @@ subtitle: Where my free time goes
           <span class="sr-only">Previous</span>
         </a>
         <a class="carousel-control-next right carousel-control" href="#carouselExampleCaptions" role="button" data-slide="next">
-          <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+          <span class="icon-prev" aria-hidden="true"></span>
           <span class="sr-only">Next</span>
         </a>
       </div>
