--- a/projects.html
+++ b/projects.html
@@ -18,7 +18,11 @@ subtitle: Where my free time goes
           <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
           <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
           <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+            <li data-target="#carouselExampleCaptions" data-slide-to="3"></li>
+            <li data-target="#carouselExampleCaptions" data-slide-to="4"></li>
+            <li data-target="#carouselExampleCaptions" data-slide-to="5"></li>
         </ol>
+          
         <div class="carousel-inner" style="max-height: 300px">
           <div class="carousel-item item active">
             <img src="/img/longboard/longboard_feature.jpg" class="d-block w-100" alt="...">
