--- a/projects.html
+++ b/projects.html
@@ -42,20 +42,20 @@ subtitle: Where my free time goes
           </div>
         </div>
           
-          <div class="carousel-item item active">
+          <div class="carousel-item item ">
             <img src="/img/longboard/longboard_rough.jpg" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
               <p></p>
             </div>
           </div>
-          <div class="carousel-item item active">
+          <div class="carousel-item item ">
             <img src="/img/longboard/longboard_decal.jpg" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
               <p></p>
             </div>
           </div>
           
-          <div class="carousel-item item active">
+          <div class="carousel-item item ">
             <img src="/img/longboard/longboard_feature.jpg" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
               <p></p>
