--- a/projects.html
+++ b/projects.html
@@ -10,7 +10,7 @@ subtitle: Where my free time goes
 
 </style>
 
-<div class="contained-fluid">
+<div class="container-fluid">
     <hr>
 
     <div class="row">
