--- a/projects.html
+++ b/projects.html
@@ -10,12 +10,12 @@ subtitle: Where my free time goes
 
 </style>
 
-<div class="container-fluid">
+<div class="container-fluid" style="width: 80%">
     <hr>
 
     <div class="row">
       <div class="col-sm-8">
-            <h2 style="text-align: center; padding-top: 2%">DIY Electric Longboard</h2>
+            <h2 style="text-align: center;">DIY Electric Longboard</h2>
           <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel" style="align-content: center; max-height: 300px">
             <ol class="carousel-indicators">
               <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
@@ -79,7 +79,7 @@ subtitle: Where my free time goes
 
 
       <div class="col-sm-4">
-            <p>This is how I built the longboard! lkasjdflaskdjflsk</p>
+            <p style="padding-top: 2%">This is how I built the longboard! lkasjdflaskdjflsk</p>
         </div>
     </div>
 
