--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ bigimg:
 
 <p class="about-text">
 <span class="fa fa-briefcase about-icon"></span>
-Currently an <strong>Electrical Engineering intern</strong></a> at the Green Bank Observatory. Working on a machine-learning-based, real-time radio frequency interference and FRB/pulsar pulse detection project for radio astronomy observations. <a href="files/Resume_MaxHawkins_10-2018.pdf">My resume.</a>
+Currently an <strong>Electrical Engineering intern</strong></a> at the Green Bank Observatory. Working on a machine-learning-based, real-time radio frequency interference and FRB/pulsar pulse detection project for radio astronomy observations. <a href="files/Resume_MaxHawkins.pdf">My resume.</a>
 </p>
 
 <p class="about-text">
