--- a/index.html
+++ b/index.html
@@ -11,14 +11,13 @@ bigimg:
 
 <div id="aboutme-section">
 
+<span class="fa fa-graduation-cap about-icon"></span>
+Working towards my BS in <strong>Electrical Engineering</strong> from the University of Alabama - Tuscaloosa. Minors in Math and the Randall Research Scholars program (formerly known as the Computer Based Honors Program). Looking for EE or software/machine learning internships for Summer 2020.
+</p>
+    
 <p class="about-text">
 <span class="fa fa-briefcase about-icon"></span>
-Currently an <strong>Electrical Engineering intern</strong></a> at the Green Bank Observatory. Working on a machine-learning-based, real-time radio frequency interference and FRB/pulsar pulse detection project for radio astronomy observations. <a href="files/Resume_MaxHawkins.pdf">My resume.</a>
-</p>
-
-<p class="about-text">
-<span class="fa fa-graduation-cap about-icon"></span>
-Working towards my BS in <strong>Electrical Engineering</strong> from the University of Alabama - Tuscaloosa. Minors in Math and the Randall Research Scholars program (formerly known as the Computer Based Honors Program). 
+Formerly an <strong>Electrical Engineering intern</strong></a> at the Green Bank Observatory. Worked on a machine-learning-based, real-time radio frequency interference and FRB/pulsar pulse detection project for radio astronomy observations. I'm continuing this research through Fall 2019. <a href="files/Resume_MaxHawkins.pdf">My resume.</a>
 </p>
 
 <p class="about-text">
