--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@ bigimg:
 
 <div id="aboutme-section">
 
+<p class="about-text">
 <span class="fa fa-graduation-cap about-icon"></span>
 Working towards my BS in <strong>Electrical Engineering</strong> from the University of Alabama - Tuscaloosa. Minors in Math and the Randall Research Scholars program (formerly known as the Computer Based Honors Program). Looking for EE or software/machine learning internships for Summer 2020.
 </p>
