Update longboard description

--- a/projects.html
+++ b/projects.html
@@ -79,7 +79,7 @@ subtitle: Where my free time goes
 
 
       <div class="col-sm-4">
-            <p style="padding-top: 2%">This is how I built the longboard! lkasjdflaskdjflsk</p>
+            <p style="padding-top: 2%">Here are some pictures of th longboard build process. More information coming soon.</p>
         </div>
     </div>
 
