Update picture max heights

--- a/projects.html
+++ b/projects.html
@@ -16,7 +16,7 @@ subtitle: Where my free time goes
     <div class="row">
       <div class="col-sm-8">
             <h2 style="text-align: center;">DIY Electric Longboard</h2>
-          <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel" style="align-content: center; max-height: 300px">
+          <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel" style="align-content: center; max-height: 500px">
             <ol class="carousel-indicators">
               <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
               <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
@@ -79,7 +79,7 @@ subtitle: Where my free time goes
 
 
       <div class="col-sm-4">
-            <p style="padding-top: 2%">Here are some pictures of th longboard build process. More information coming soon.</p>
+            <p style="padding-top: 2%">Here are some pictures of the longboard build process. More information coming soon.</p>
         </div>
     </div>
 
