Update major and 2020 internship on home page

--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@ bigimg:
 
 <p class="about-text">
 <span class="fa fa-graduation-cap about-icon"></span>
-Working towards my BS in <strong>Electrical Engineering</strong> from the University of Alabama - Tuscaloosa. Minors in Math and the Randall Research Scholars program (formerly known as the Computer Based Honors Program). Looking for EE or software/machine learning internships for Summer 2020.
+Working towards my BS in <strong>Computer Engineering</strong> from the University of Alabama - Tuscaloosa. Minors in Math, Computer Science, and the Randall Research Scholars program (formerly known as the Computer Based Honors Program). I'm excited to spend the summer of 2020 working for Breakthrough Listen at UC Berkeley's SETI research center.
 </p>
     
 <p class="about-text">
 <span class="fa fa-briefcase about-icon"></span>
-Formerly an <strong>Electrical Engineering intern</strong></a> at the Green Bank Observatory. Worked on a machine-learning-based, real-time radio frequency interference and FRB/pulsar pulse detection project for radio astronomy observations. I'm continuing this research through Fall 2019. <a href="files/Resume_MaxHawkins.pdf">My resume.</a>
+Formerly an <strong>Electrical Engineering intern</strong> at the Green Bank Observatory. Worked on a machine-learning-based, real-time radio frequency interference and FRB/pulsar pulse detection project for radio astronomy observations. I continued this research through Fall 2019 and will present it at the January 2020 conference of the American Astronomical Society. <a href="files/Resume_MaxHawkins.pdf">My resume.</a>
 </p>
 
 <p class="about-text">
